added text for login input fields

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <form th:action="@{/login}" method="get"/>
+        <label>Username</label>
         <input name="username"/>
+        <label>Password</label>
         <input name="password"/>
         <button type="submit">Login</button>
     </form>
