--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!-- Glyphicons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <meta charset="UTF-8">
     <title>Banking Service</title>
 </head>
 <body>
-<h1>Welcome to THE bank of your trust</h1>
-    Today is <span th:text="${today}"/>
-    <form th:action="@{/login}" method="get"/>
-        <button type="submit">Login</button>
-    </form>
-    <form th:action="@{/register}" method="get"/>
-        <button type="submit">Register</button>
-    </form>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="navbar-header mr-auto">
+        <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
+    </div>
+    <div class="navbar-nav my-2 my-lg-0">
+        <li><a th:href="@{/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+    </div>
+    <div style="height:100%; width:1em; clear:both;"></div>
+    <div class="navbar-nav my-2 my-lg-0">
+        <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </div>
+</nav>
+
+<h1>Welcome to The Bank of your Trust</h1>
+    <p>Today is <span th:text="${today}"/></p>
+    <p>Todo: Werbung, Angebote, ... </p>
 </body>
 </html>
