--- a/src/main/resources/templates/customerIndex.html
+++ b/src/main/resources/templates/customerIndex.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <!-- Glyphicons -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Online Banking</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="navbar-header mr-auto">
-            <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
-        </div>
-    </nav>
+<div th:replace="fragments/header :: navCustomer"/>
 
-    <form th:action="@{/login/customer}" method="get">
-        <div class="form-group col-md-2">
-            <label for="exampleInputUsername">Username</label>
-            <input type="text" class="form-control" id="exampleInputUsername" required>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+<h1>Welcome to The Bank of your Trust</h1>
+<h3>Login Success</h3>
+<p>Today is <span th:text="${today}"/></p>
+<p>Todo: Konten, ... </p>
 </body>
 </html>
