--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
             <a class="navbar-brand" th:href="@{/login/customer}">The Bank of Trust</a>
         </div>
         <div class="navbar-nav my-2 my-lg-0">
-            <li><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            <li><a th:href="@{/logout}" method="post" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </div>
     </nav>
 </div>
