--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,63 +18,63 @@
     </div>
 </nav>
 
-<form th:action="@{/register}" method="post">
+<form th:action="@{/customer}" th:object="${customer}" method="post">
     <div class="form-row">
         <div class="form-group col-md-2">
             <label for="inputForename">Forename</label>
-            <input type="text" class="form-control" id="inputForename" required>
+            <input type="text" th:field="*{forename}" class="form-control" id="inputForename" required>
         </div>
         <div class="form-group col-md-2">
             <label for="inputSurname">Surname</label>
-            <input type="text" class="form-control" id="inputSurname" required>
+            <input type="text" th:field="*{surname}" class="form-control" id="inputSurname" required>
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-4">
             <label for="inputTaxNr">Tax Number</label>
-            <input type="text" class="form-control" id="inputTaxNr" required>
+            <input type="text" th:field="*{taxNumber}" class="form-control" id="inputTaxNr" required>
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-2">
             <label for="inputBirthDate">Date of Birth</label>
-            <input type="date" class="form-control" id="inputBirthDate" required>
+            <input type="date" th:field="*{birthDate}" class="form-control" id="inputBirthDate" required>
         </div>
     </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-2">
             <label for="inputUsername">Username</label>
-            <input type="text" class="form-control" id="inputUsername" required>
+            <input type="text" th:field="*{username}" class="form-control" id="inputUsername" required>
         </div>
         <div class="form-group col-md-2">
             <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" required>
+            <input type="password" th:field="*{password}" class="form-control" id="inputPassword" required>
         </div>
     </div>
         <div class="form-row">
             <div class="form-group col-md-2">
                 <label for="inputStreet">Street</label>
-                <input type="text" class="form-control" id="inputStreet" required>
+                <input type="text" th:field="*{address.street}" class="form-control" id="inputStreet" required>
             </div>
             <div class="form-group col-md-1">
                 <label for="inputHouseNr">House Number</label>
-                <input type="number" class="form-control" id="inputHouseNr" required>
+                <input type="number" th:field="*{address.houseNr}" class="form-control" id="inputHouseNr" required>
             </div>
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-2">
             <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip" required>
+            <input type="text" th:field="*{address.zipCode}" class="form-control" id="inputZip" required>
         </div>
         <div class="form-group col-md-4">
             <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity" required>
+            <input type="text" th:field="*{address.city}" class="form-control" id="inputCity" required>
         </div>
         <div class="form-group col-md-4">
             <label for="inputCountry">Country</label>
-            <input type="text" class="form-control" id="inputCountry" required>
+            <input type="text" th:field="*{address.country}" class="form-control" id="inputCountry" required>
         </div>
     </div>
     <div class="form-group">
@@ -85,7 +85,7 @@
             </label>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary" th:href="@{/registered}">Register</button>
+    <button type="submit" class="btn btn-primary" th:href="@{/customer}">Register</button>
 
 </form>
 
