--- a/src/main/resources/templates/employee_customer_address.html
+++ b/src/main/resources/templates/employee_customer_address.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <meta charset="UTF-8">
-    <title>Online Banking</title>
+    <title>Customer address</title>
 </head>
 <body>
-<div th:replace="fragments/header :: navCustomer"/>
+<div th:replace="fragments/header :: navLogout"/>
 
 <h1>Welcome to The Bank of your Trust</h1>
 <h3>Login Success</h3>
 <p>Today is <span th:text="${today}"/></p>
-<p>Todo: Konten, ... </p>
+<p>Todo: bearbeiten der Kundenadresse ... </p>
 </body>
 </html>
