--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,23 +17,48 @@
         </div>
     </nav>
 
-    <!-- show notification on error -->
-    <div th:if="${error}" th:text="${error}">
-        Invalid username or password.
-    </div>
-    <!-- show notification of logout -->
-    <span th:if="${message}" th:text="${message}"></span>
 
-    <form th:action="@{/login/customer}" method="get">
-        <div class="form-group col-md-2">
-            <label for="exampleInputUsername">Username</label>
-            <input type="text" class="form-control" id="exampleInputUsername" required>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+
+
+
+    <div class="row align-items-center justify-content-center">
+            <div class="card" style="margin-top: 250px;">
+                <article class="card-body">
+                    <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
+                    <hr>
+
+                    <!-- show notification on error -->
+                    <div th:if="${error}" th:text="${error}">
+                        Invalid username or password.
+                    </div>
+                    <!-- show notification of logout -->
+                    <span th:if="${message}" th:text="${message}"></span>
+
+                    <form th:action="@{/login/customer}" method="get">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                                </div>
+                                <input id="InputUsername" class="form-control" placeholder="Username" type="text" required>
+                            </div> <!-- input-group.// -->
+                        </div> <!-- form-group// -->
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                                </div>
+                                <input id="InputPassword" class="form-control" placeholder="******" type="password" required>
+                            </div> <!-- input-group.// -->
+                        </div> <!-- form-group// -->
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        </div> <!-- form-group// -->
+                        <!--p class="text-center"><a href="#" class="btn">Forgot password?</a></p-->
+                    </form>
+                </article>
+            </div> <!-- card.// -->
+    </div>
+
 </body>
 </html>
