finished security chapter

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
     </div>
     <div class="navbar-nav my-2 my-lg-0">
-        <li><a th:href="@{/customer/new}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
+        <li><a th:href="@{/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
     </div>
     <div style="height:100%; width:1em; clear:both;"></div>
     <div class="navbar-nav my-2 my-lg-0">
