--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:padding-left="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 
 
     <meta charset="UTF-8">
@@ -18,76 +25,80 @@
     </div>
 </nav>
 
-<form th:action="@{/customer}" th:object="${customer}" method="post">
-    <div class="form-row">
-        <div class="form-group col-md-2">
-            <label for="inputForename">Forename</label>
-            <input type="text" th:field="*{forename}" class="form-control" id="inputForename" required>
+<div style="max-width: 1000px; margin: 100px auto auto;">
+    <form th:action="@{/customer}" th:object="${customer}" method="post">
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-3">
+                <label for="inputForename">Forename</label>
+                <input type="text" th:field="*{forename}" class="form-control" id="inputForename" required>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="inputSurname">Surname</label>
+                <input type="text" th:field="*{surname}" class="form-control" id="inputSurname" required>
+            </div>
         </div>
-        <div class="form-group col-md-2">
-            <label for="inputSurname">Surname</label>
-            <input type="text" th:field="*{surname}" class="form-control" id="inputSurname" required>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-4">
-            <label for="inputTaxNr">Tax Number</label>
-            <input type="text" th:field="*{taxNumber}" class="form-control" id="inputTaxNr" required>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-2">
-            <label for="inputBirthDate">Date of Birth</label>
-            <input type="date" th:field="*{birthDate}" class="form-control" id="inputBirthDate" required>
-        </div>
-    </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-2">
-            <label for="inputUsername">Username</label>
-            <input type="text" th:field="*{username}" class="form-control" id="inputUsername" required>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="inputPassword">Password</label>
-            <input type="password" th:field="*{password}" class="form-control" id="inputPassword" required>
-        </div>
-    </div>
-        <div class="form-row">
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-4">
+                <label for="inputTaxNr">Tax Number</label>
+                <input type="text" th:field="*{taxNumber}" class="form-control" id="inputTaxNr" required>
+            </div>
             <div class="form-group col-md-2">
+                <label for="inputBirthDate">Date of Birth</label>
+                <input type="date" th:field="*{birthDate}" class="form-control" id="inputBirthDate" required>
+            </div>
+        </div>
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-3">
+                <label for="inputUsername">Username</label>
+                <input type="text" th:field="*{username}" class="form-control" id="inputUsername" required>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="inputPassword">Password</label>
+                <input type="password" th:field="*{password}" class="form-control" id="inputPassword" required>
+            </div>
+        </div>
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-4">
                 <label for="inputStreet">Street</label>
                 <input type="text" th:field="*{address.street}" class="form-control" id="inputStreet" required>
             </div>
-            <div class="form-group col-md-1">
+            <div class="form-group col-md-2">
                 <label for="inputHouseNr">House Number</label>
                 <input type="number" th:field="*{address.houseNr}" class="form-control" id="inputHouseNr" required>
             </div>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
-            <input type="text" th:field="*{address.zipCode}" class="form-control" id="inputZip" required>
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-2">
+                <label for="inputZip">Zip</label>
+                <input type="text" th:field="*{address.zipCode}" class="form-control" id="inputZip" required>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputCity">City</label>
+                <input type="text" th:field="*{address.city}" class="form-control" id="inputCity" required>
+            </div>
         </div>
-        <div class="form-group col-md-4">
-            <label for="inputCity">City</label>
-            <input type="text" th:field="*{address.city}" class="form-control" id="inputCity" required>
-        </div>
-        <div class="form-group col-md-4">
-            <label for="inputCountry">Country</label>
-            <input type="text" th:field="*{address.country}" class="form-control" id="inputCountry" required>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck" required>
-            <label class="form-check-label" for="gridCheck">
-                Agree to terms and conditions
-            </label>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary" th:href="@{/customer}">Register</button>
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-4">
+                <label for="inputCountry">Country</label>
+                <input type="text" th:field="*{address.country}" class="form-control" id="inputCountry" required>
+            </div>
 
-</form>
+            <div class="form-group col-md-2"></div>
+        </div>
+        <div class="form-group form-row justify-content-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                <label class="form-check-label" for="gridCheck">
+                    Agree to terms and conditions
+                </label>
+            </div>
+        </div>
+        <div class="form-row justify-content-center">
+        <button type="submit" class="btn btn-primary" th:href="@{/customer}">Register</button>
+        </div>
+
+    </form>
+</div>
 
 </body>
 </html>
