--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                     <!-- show notification of logout -->
                     <span th:if="${message}" th:text="${message}"></span>
 
-                    <form th:action="@{/login/customer}" method="get">
+                    <form th:action="@{/login}" th:object="${customer}" method="put">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
@@ -52,7 +52,7 @@
                             </div> <!-- input-group.// -->
                         </div> <!-- form-group// -->
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block"  th:href="@{/login}">Login</button>
                         </div> <!-- form-group// -->
                         <!--p class="text-center"><a href="#" class="btn">Forgot password?</a></p-->
                     </form>
