login is functioning with test users

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,13 +34,13 @@
                     <!-- show notification of logout -->
                     <span th:if="${message}" th:text="${message}"></span>
 
-                    <form th:action="@{/login}" th:object="${customer}" method="put">
+                    <form th:action="@{/login}" method="post" th:object="${customer}">
                         <div class="form-group">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                                 </div>
-                                <input id="InputUsername" class="form-control" placeholder="Username" type="text" required>
+                                <input id="InputUsername" name="username" class="form-control" placeholder="Username" type="text" required>
                             </div> <!-- input-group.// -->
                         </div> <!-- form-group// -->
                         <div class="form-group">
@@ -48,11 +48,11 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
                                 </div>
-                                <input id="InputPassword" class="form-control" placeholder="******" type="password" required>
+                                <input id="InputPassword" name="password" class="form-control" placeholder="******" type="password" required>
                             </div> <!-- input-group.// -->
                         </div> <!-- form-group// -->
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-block"  th:href="@{/login}">Login</button>
+                            <button type="submit" class="btn btn-primary btn-block">Login</button>
                         </div> <!-- form-group// -->
                         <!--p class="text-center"><a href="#" class="btn">Forgot password?</a></p-->
                     </form>
