login is functioning with database users

--- a/src/main/resources/templates/customer_index.html
+++ b/src/main/resources/templates/customer_index.html
@@ -19,6 +19,7 @@
 
 <h1>Welcome to The Bank of your Trust</h1>
 <h3>Login Success</h3>
+<p th:if="${username}">Your username is <span th:text="${username}"/></p>
 <p>Today is <span th:text="${today}"/></p>
 <p>Todo: Konten, ... </p>
 
