--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
 <div th:fragment="navLogout">
     <nav class="navbar navbar-dark bg-dark">
         <div class="navbar-header mr-auto">
-            <a class="navbar-brand" th:href="@{/login/customer}">The Bank of Trust</a>
+            <a class="navbar-brand" th:href="@{/dashboard}">The Bank of Trust</a>
         </div>
         <div class="navbar-nav my-2 my-lg-0">
             <li><a th:href="@{/logout}" method="post" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
@@ -15,7 +15,7 @@
 <div th:fragment="navEmpty">
     <nav class="navbar navbar-dark bg-dark">
         <div class="navbar-header mr-auto">
-            <a class="navbar-brand" th:href="@{/login/customer}">The Bank of Trust</a>
+            <a class="navbar-brand" th:href="@{/dashboard}">The Bank of Trust</a>
         </div>
     </nav>
 </div>
