--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 <div th:fragment="navEmpty">
     <nav class="navbar navbar-dark bg-dark">
         <div class="navbar-header mr-auto">
-            <a class="navbar-brand" th:href="@{/dashboard}">The Bank of Trust</a>
+            <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
         </div>
     </nav>
 </div>
