--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,15 @@
     <title>Login</title>
 </head>
 <body>
+<!--
     <nav class="navbar navbar-dark bg-dark">
         <div class="navbar-header mr-auto">
             <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
         </div>
     </nav>
+-->
 
+<div th:replace="fragments/header :: navEmpty"/>
 
 
 
