--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,18 +15,8 @@
     <title>Banking Service</title>
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
-    <div class="navbar-header mr-auto">
-        <a class="navbar-brand" th:href="@{/}">The Bank of Trust</a>
-    </div>
-    <div class="navbar-nav my-2 my-lg-0">
-        <li><a th:href="@{/register}"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-    </div>
-    <div style="height:100%; width:1em; clear:both;"></div>
-    <div class="navbar-nav my-2 my-lg-0">
-        <li><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </div>
-</nav>
+
+<div th:replace="fragments/header :: navRegisterLogin"/>
 
 <h1>Welcome to The Bank of your Trust</h1>
     <p>Today is <span th:text="${today}"/></p>
