refactored project structure began with work to apply for new accounts

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -37,7 +37,7 @@
 </table>
 
 <button type="button" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-plus" aria-hidden="true" th:href="@{/customer/account/new}"></span> Apply for an account
+    <span class="glyphicon glyphicon-plus" aria-hidden="true" th:href="@{/accounts/opening}"></span> Apply for an account
 </button>
 
 </body>
