added routing to apply for new account

--- a/src/main/resources/templates/customer/account_apply.html
+++ b/src/main/resources/templates/customer/account_apply.html
@@ -22,5 +22,42 @@
 <p th:if="${username}">Your username is <span th:text="${username}"/></p>
 <p>Today is <span th:text="${today}"/></p>
 <p>Todo: Neuen Account beantragen ... </p>
+
+
+<div th:replace="fragments/header :: navLogout"/>
+
+<div style="max-width: 1000px; margin: 100px auto auto;">
+    <form th:action="@{/accounts}" th:object="${accountRequest}" method="post">
+        <div class="form-row justify-content-center">
+            <div class="form-group col-md-3">
+                <label for="inputForename">Reason</label>
+                <input type="text" th:field="*{reason}" class="form-control" id="inputForename" required>
+            </div>
+        </div>
+        <div>
+            <div class="form-group col-md-3">
+                <label for="inputSurname">Monthly Income</label>
+                <input type="number" th:field="*{monthlyIncome}" class="form-control" id="inputSurname" required>
+            </div>
+        </div>
+
+        <div class="form-group form-row justify-content-center">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                <label class="form-check-label" for="gridCheck">
+                    Agree to terms and conditions
+                </label>
+            </div>
+        </div>
+        <div class="form-row justify-content-center">
+            <button type="reset" class="btn" th:href="@{/dashboard}">Cancel</button>
+            <button type="submit" class="btn btn-primary" th:href="@{/register}">Register</button>
+        </div>
+
+    </form>
+</div>
+
+
+
 </body>
 </html>
