--- a/src/main/resources/templates/customer/account_apply.html
+++ b/src/main/resources/templates/customer/account_apply.html
@@ -42,7 +42,7 @@
 
         <div class="form-row justify-content-center">
             <button class="btn" onclick="goBack()">Cancel</button>
-            <button type="submit" class="btn btn-primary" th:href="@{/accounts}">Register</button>
+            <button type="submit" class="btn btn-primary" th:href="@{/accounts}">Request</button>
         </div>
 
     </form>
