--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -18,70 +18,72 @@
     <!-- Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+
     <meta charset="UTF-8">
     <title>Online Banking</title>
 </head>
 <body>
 <div th:replace="fragments/header :: navLogout"/>
 
-<h1>Welcome to The Bank of your Trust</h1>
-<h3>Login Success</h3>
-<p th:if="${username}">Your username is <span th:text="${username}"/></p>
-<p>Today is <span th:text="${today}"/></p>
-<p>Todo: Konten, ... </p>
 
-<h3 th:if="${ #lists.isEmpty(accounts)}">There are no accounts yet.</h3>
-<h3 th:if="${info}" th:text="${info}"></h3>
-<h3 th:if="${error}" th:text="${error}"></h3>
+<div class="row">
+    <div class="col-md-8 mx-auto">
+        <h1>Welcome to The Bank of your Trust</h1>
+        <h2 th:if="${name}">Hello <span th:text="${name}"/>, have a nice day! </h2>
 
-<table class="table table-hover" style="max-width: 800px" th:if="${not #lists.isEmpty(accounts)}">
-    <tr>
-        <th>No</th>
-        <th>IBAN</th>
-        <th>Balance</th>
-        <th style="text-align: center;">Actions</th>
-    </tr>
-    <tr th:each="account, custStat : ${accounts}"
-        th:onclick="'javascript:rowClicked(\'' + ${account.id} + '\');'"
-        style="cursor: pointer">
-        <td th:text="${custStat.count}">1</td>
-        <td th:text="${account.iban}" style="text-align: right;">123456789</td>
-        <td th:text="${#numbers.formatDecimal(account.balance, 1, 'DEFAULT', 2, 'DEFAULT')}"
-            style="text-align: right;">1000
-        </td>
-        <td style="text-align: right;">
-            <div class="row align-items-center justify-content-center">
+        <h3 th:if="${ #lists.isEmpty(accounts)}">There are no accounts yet.</h3>
+        <h3 style="color: forestgreen" th:if="${info}" th:text="${info}"></h3>
+        <h3 style="color: firebrick" th:if="${error}" th:text="${error}"></h3>
 
-                <form th:action="@{/accounts/opening}" method="GET">
-                    <button type="submit" class="btn" th:href="@{/accounts/opening}">
+        <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(accounts)}">
+            <tr>
+                <th>No</th>
+                <th style="text-align: center;">IBAN</th>
+                <th style="text-align: center;">Balance</th>
+                <th style="text-align: center;">Actions</th>
+            </tr>
+            <tr th:each="account, custStat : ${accounts}"
+                th:onclick="'javascript:rowClicked(\'' + ${account.id} + '\');'"
+                style="cursor: pointer">
+                <td th:text="${custStat.count}">1</td>
+                <td th:text="${account.iban}" style="text-align: right;">DE123456789</td>
+                <td th:text="${#numbers.formatDecimal(account.balance, 1, 'DEFAULT', 2, 'DEFAULT')}"
+                    style="text-align: right;">1000
+                </td>
+                <td style="text-align: right;">
+                    <div class="row align-items-center justify-content-center">
+
+                        <form th:action="@{/accounts/opening}" method="GET">
+                            <button type="submit" class="btn" th:href="@{/accounts/opening}">
                             <span class="glyphicon glyphicon-transfer" aria-hidden="true"
                                   style="max-height:100%;"></span>
-                    </button>
-                </form>
-                <div style="width: 5px"></div>
-                <form th:action="@{/accounts/opening}" method="GET">
-                    <button type="submit" class="btn" th:href="@{/accounts/opening}">
+                            </button>
+                        </form>
+                        <div style="width: 5px"></div>
+                        <form th:action="@{/accounts/opening}" method="GET">
+                            <button type="submit" class="btn" th:href="@{/accounts/opening}">
                                 <span class="glyphicon glyphicon-trash" aria-hidden="true"
                                       style="max-height:100%;"></span>
-                    </button>
-                </form>
-            </div>
-        </td>
-    </tr>
-</table>
+                            </button>
+                        </form>
+                    </div>
+                </td>
+            </tr>
+        </table>
 
-<form th:action="@{/accounts/opening}" method="GET">
-    <button type="submit" class="btn btn-primary" th:href="@{/accounts/opening}">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Apply for an account
-    </button>
-</form>
+        <form th:action="@{/accounts/opening}" method="GET">
+            <button type="submit" class="btn btn-primary" th:href="@{/accounts/opening}">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Apply for an account
+            </button>
+        </form>
 
 
-<script>
-    function rowClicked(value) {
-        location.href = "/accounts/" + value;
-    }
-</script>
-
+        <script>
+            function rowClicked(value) {
+                location.href = "/accounts/" + value;
+            }
+        </script>
+    </div>
+</div>
 </body>
 </html>
