--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,7 +13,6 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
-
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
@@ -95,6 +94,11 @@
 
     </form>
 </div>
+
+<script>
+    $("#inputZip").attr("value", "");
+    $("#inputHouseNr").attr("value", "");
+</script>
 
 </body>
 </html>
