--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -31,9 +31,12 @@
         <h1>Welcome to The Bank of your Trust</h1>
         <h2 th:if="${name}">Hello <span th:text="${name}"/>, have a nice day! </h2>
 
-        <h3 th:if="${ #lists.isEmpty(accounts)}">There are no accounts yet.</h3>
-        <h3 style="color: forestgreen" th:if="${info}" th:text="${info}"></h3>
-        <h3 style="color: firebrick" th:if="${error}" th:text="${error}"></h3>
+        <div style="clear: both">
+            <h3 th:if="${ #lists.isEmpty(accounts)}" style="float: left">There are no accounts yet.</h3>
+            <h3 style="color: forestgreen; float: left" th:if="${info}" th:text="${info}"></h3>
+            <h3 style="color: firebrick; float: left" th:if="${error}" th:text="${error}"></h3>
+            <h3 style="float: right" th:text="${#numbers.formatDecimal(totalBalance, 1, 'DEFAULT', 2, 'DEFAULT')}/></h3>
+        </div>
 
         <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(accounts)}">
             <tr>
