fixed problems with buttons

--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -35,24 +35,26 @@
             <h3 th:if="${ #lists.isEmpty(accounts)}" style="float: left">There are no accounts yet.</h3>
             <h3 style="color: forestgreen; float: left" th:if="${info}" th:text="${info}"></h3>
             <h3 style="color: firebrick; float: left" th:if="${error}" th:text="${error}"></h3>
-            <h3 style="float: right" th:text="${#numbers.formatDecimal(totalBalance, 1, 'DEFAULT', 2, 'DEFAULT')}/></h3>
+            <h3 style="float: right" th:text="${#numbers.formatDecimal(totalBalance/100, 1, 'DEFAULT', 2, 'DEFAULT')}"></h3>
         </div>
+
 
         <table class="table table-hover" style="margin-top: 50px" th:if="${not #lists.isEmpty(accounts)}">
             <tr>
                 <th>No</th>
                 <th style="text-align: center;">IBAN</th>
                 <th style="text-align: center;">Balance</th>
-                <th style="text-align: center;">Actions</th>
+                <!--<th style="text-align: center;">Actions</th>-->
             </tr>
             <tr th:each="account, custStat : ${accounts}"
-                th:onclick="'javascript:rowClicked(\'' + ${account.id} + '\');'"
+                th:onclick="'javascript:rowClicked(\'' + ${account.id} + '\',);'"
                 style="cursor: pointer">
                 <td th:text="${custStat.count}">1</td>
                 <td th:text="${account.iban}" style="text-align: right;">DE123456789</td>
-                <td th:text="${#numbers.formatDecimal(account.balance, 1, 'DEFAULT', 2, 'DEFAULT')}"
+                <td th:text="${#numbers.formatDecimal(account.balance/100, 1, 'DEFAULT', 2, 'DEFAULT')}"
                     style="text-align: right;">1000
                 </td>
+                <!--
                 <td style="text-align: right;">
                     <div class="row align-items-center justify-content-center">
 
@@ -61,6 +63,7 @@
                         <div th:replace="fragments/buttons :: btnDeleteAccount"/>
                     </div>
                 </td>
+                -->
             </tr>
         </table>
 
@@ -72,7 +75,7 @@
 
 
         <script>
-            function rowClicked(value) {
+            function rowClicked(value,column) {
                 location.href = "/accounts/" + value;
             }
         </script>
